pruebas unitarias de ShowService y CommentService, fix parametro getName por getChannel en ShowService